Changes relative to tre-0.19:
  * @, DYNAMIC-MAP return lists of arguments are arrays.
  * PAD accepts arrays.
  * Function definitions: single argument does not have to
    be put in a list.
  * REF: New functions to look up from alists, arrays, hash
    tables and objects.
  * ^ is now synonymous for REF.  (It was for FN.)
  * ACCCENT-CIRCONFLEX has been removed.
  * ENSURE-LIST: Do not put NIL into a list.
  * ENSURE-ARRAY: New function to convert lists into arrays.
  * =-ELT has been fixed.
  * FORMAT supports ~X to print hexadecimals. (Not complete.)

Changes of tre-0.19 relative to tre-0.18:
  * Bug-fix: jump tag optimizer translated any number.
  * Braces '{}' cannot be used as an alias for PROGN anymore.
    Now property names may be variables.
  * READ: Reads literal arrays. '#(…)'.
  * PERMUTATE: Takes &REST argument instead of list of lists.
  * DEFINE-SLOT-SETTER*: Weird idea removed.
  * DEFINE-GENSYM-GENERATOR -> DEF-GENSYM.
  * SIMPLE-OBJECT? -> JSON-OBJECT?.
  * LML2XML allows to print standalone attributes (with NIL
    values).  Assigned an empty string before.
  * CL: NANOTIME replaced by MILLISECONDS-SINCE-1970, albeit
    with precision of seconds only.
    "js" and "php".
  * PRINT-HTML-SCRIPT: Old browsers not supported anymore.
    Removed strict mode.
  * CL: FIND-SYMBOL takes strings instead of symbols.
  * PHP: versions older than 7.0 are not supported anymore.
         In return, code size has been reduced by ~10% and
         overall performance has been greatly improved as
         well.
  * PHP: Does not deal with magic quotes anymore.
  * PHP: Faster array access.
  * PHP: Native arrays are recognized as hash tables if they
         are not sequential.
  * PHP: MAKE-HASH-TABLE is a regular function, not a macro.
  * JS: STRING? also checks if object is an instance of
        class "String".
  * JS/PHP: Code size reduction by ~30%.
  * JS/PHP: MILLISECONDS-SINCE-1970 moved here from modules